<resources>
    <string name="app_name">PLYSS</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="signup">Signup</string>
    <string name="already_signup">Or signup now </string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="user_name">User name</string>
    <string name="users">Registered Users</string>
    <string name="_000">00</string>
    <string name="title_captures">Captured Data</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="state_of_origin">State of Origin</string>
    <string name="state_of_residence">State of Residence</string>
    <string name="lga_of_origin">LGA of Origin</string>
    <string name="lga_of_residence">LGA of Residence</string>
    <string name="vin">Voter\'s Registration Number</string>
    <string name="address">Address</string>
    <string name="gender">Gender</string>
    <string name="occupation">Occupation</string>
    <string name="marital_status">Marital Status</string>
    <string name="title_add_form">Add New Data</string>
    <string name="add_new_data">Add New Data</string>
    <string name="captured_by">Captured by:  %1$s</string>
    <string name="dash">--</string>
    <string name="y_p_s_d">P . L . Y . S . S</string>
    <string name="capture_data">Capture Data</string>
    <string name="collect_data">Collect Data</string>
    <string name="household">Household</string>
    <string name="individual_data">Individual Data</string>
    <string name="household_data">Household Data</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="individual">Individual</string>
    <string name="father_s_name">Father\'s Name</string>
    <string name="mother_s_name">Mother\'s Name</string>
    <string name="no_of_dependants">No. of dependants</string>
    <string name="street">Street</string>
    <string name="no_of_wives_if_married">No. of Wives (If Married)</string>
    <string name="no_of_children">No. of Children</string>
    <string name="residence">Residence</string>
    <string name="request_password">Request Password</string>
    <string name="password_instructions">Enter your email below. The password reset link will be sent to this email. You will then follow the link to reset your password.</string>
</resources>
